@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     13/12/2001
-## RCS-ID:      $Id: GridCellRenderer.xs,v 1.7 2004/12/21 21:12:52 mbarbon Exp $
+## RCS-ID:      $Id: GridCellRenderer.xs,v 1.8 2005/07/30 10:23:54 mbarbon Exp $
 ## Copyright:   (c) 2001-2004 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -91,6 +91,7 @@ SV*
 wxPlGridCellRenderer::new()
   CODE:
     wxPlGridCellRenderer* r = new wxPlGridCellRenderer( CLASS );
+    r->SetClientObject( new wxPliUserDataCD( r->m_callback.GetSelf() ) );
     RETVAL = r->m_callback.GetSelf();
     SvREFCNT_inc( RETVAL );
   OUTPUT: RETVAL
